// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button rendering renders expected elements when both size is small and disabled is true 1`] = `
<span
  aria-disabled="true"
  className="Button Button--small"
  id="test"
>
  Test
</span>
`;

exports[`Button rendering renders expected elements when className is set 1`] = `
<button
  className="Button Button--medium Button--secondary testClass"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when disabled is true 1`] = `
<span
  aria-disabled="true"
  className="Button Button--medium"
  id="test"
>
  Test
</span>
`;

exports[`Button rendering renders expected elements when disabled is true and className is set 1`] = `
<span
  aria-disabled="true"
  className="Button Button--medium testClass"
  id="test"
>
  Test
</span>
`;

exports[`Button rendering renders expected elements when onClick is not specified 1`] = `
<button
  className="Button Button--medium Button--secondary"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when onClick is specified 1`] = `
<button
  className="Button Button--medium Button--secondary"
  id="test"
  onClick={[MockFunction]}
  type="button"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when size is small 1`] = `
<button
  className="Button Button--small Button--secondary"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when tooltipText is set 1`] = `
<button
  className="Button Button--medium Button--secondary"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when type is primary 1`] = `
<button
  className="Button Button--medium Button--primary"
  id="test"
  type="submit"
>
  Test
</button>
`;
